# PairNet_on_Gemmini

./: .gitignore  CMakeLists.txt  Oap_params.py  PairNet_params.py  Qconv1d.py  README.md  gesture_signals.py  layerBylayer_allwindows.csv  library.py  optimal_params.py  pairnet_main.py  pairnet_params.py  plot_faster.py  requirement.txt  requirements.txt  test_conv1d.py  vision_quantization.py
Oap/: model_Oap.py
Oap/model_h5/: best_OaP_SAM_adjust_branch_s1_1205.h5  best_OaP_SAM_adjust_branch_s2_1205.h5
Oap/test/: plot_prediction.py  plot_sensor.py  test_report.py
Oap/train/: Oap_Data_Aug.py  Oap_Data_Trans.py  Oap_GD_loss.py  Oap_train.py
PairNet/: Model_name.txt  filtered_result_sequential.py  model_pairnet.py  preprocessing.py  preprocessing_utils.py  test.py  test_YHChen.py  test_report.py  train.py
PairNet/model/: pairnet_model128_12_20220808.h5  pairnet_model16_12_20220214.h5  pairnet_model16_12_20220216.h5  pairnet_model16_5_20220216.h5  pairnet_model16_7_20220216.h5  pairnet_model16_9_20220216.h5  pairnet_model32_12_20220605.h5  pairnet_model32_12_20220822.h5  pairnet_model64_12_20220503.h5
PairNet/out_csv/: NN1_fp_model.csv  NN1_int8_model.csv  NN2_fp_model.csv  NN2_int8_model.csv  NN3_fp_model.csv  NN3_int8_model.csv
include/: Qgesture_signals.h  Qgesture_signals_2165.h  Qgesture_signals_465.h  Qpairnet_mc2conv1d_params.h  Qpairnet_params.h  Qpairnet_params12_128_optimal.h  Qpairnet_params12_16_optimal.h  Qpairnet_params12_32_optimal.h  Qpairnet_params12_64_optimal.h  Qpairnet_params7_16_465.h  func.h  gemmini_custom.h  gesture_signals.h  library.h  pairnet_params.h
src/: PairNet_ALLQ_main.c  PairNet_QDEQ_main.c  PairNet_testConv1d_main.c  conv1d_main.c  mc2_conv1d_main.c  pairNet_ALLQ_main.c  pairNet_QDEQ_main.c  pairNet_mc2_main.c  post_processing_plot.c
